codepkg/objects/ZPAPER__zpaper__c.object
<CustomObject>
    <fields>
        <fullName>inboundEmailRecordType__c</fullName>
        <label>inboundEmailRecordType__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inboundFaxRecordType__c</fullName>
        <description>Document ReordTypeId for Incoming Fax</description>
        <label>inboundFaxRecordType__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outboundEmailRecordType__c</fullName>
        <label>outboundEmailRecordType__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outboundFaxRecordType__c</fullName>
        <description>Document RecordTypeId for outbound faxes</description>
        <label>outboundFaxRecordType__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>